--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,39 +7,183 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="48dp"
-        android:text="Button"
+        android:id="@+id/button1Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Queota?"
+        app:layout_constraintEnd_toStartOf="@+id/button2Id"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="48dp"
-        android:text="Button"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        android:id="@+id/button2Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="Easy Peasy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button1Id"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="48dp"
+        android:id="@+id/button3Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Button"
+        android:text="O Nooo"
+        app:layout_constraintEnd_toStartOf="@+id/button4Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1Id" />
+
+    <Button
+        android:id="@+id/button4Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="O Crab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/button3Id"
+        app:layout_constraintTop_toBottomOf="@+id/button2Id" />
+
+    <Button
+        android:id="@+id/button5Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="CT Win"
+        app:layout_constraintEnd_toStartOf="@+id/button6Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3Id" />
+
+    <Button
+        android:id="@+id/button6Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="T Win"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button5Id"
+        app:layout_constraintTop_toBottomOf="@+id/button4Id" />
+
+    <Button
+        android:id="@+id/button7Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Bomb Defused"
+        app:layout_constraintEnd_toStartOf="@+id/button8Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5Id" />
+
+    <Button
+        android:id="@+id/button8Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="bomb planted"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button7Id"
+        app:layout_constraintTop_toBottomOf="@+id/button6Id" />
+
+    <Button
+        android:id="@+id/button9Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="?"
+        app:layout_constraintEnd_toStartOf="@+id/button10Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7Id" />
+
+    <Button
+        android:id="@+id/button10Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button9Id"
+        app:layout_constraintTop_toBottomOf="@+id/button8Id" />
+
+    <Button
+        android:id="@+id/button11Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="?"
+        app:layout_constraintEnd_toStartOf="@+id/button12Id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button9Id" />
+
+    <Button
+        android:id="@+id/button12Id"
+        style="@android:style/Widget.Material.Light.Button.Inset"
+        android:layout_width="159dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:text="?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button11Id"
+        app:layout_constraintTop_toBottomOf="@+id/button10Id" />
+
 </android.support.constraint.ConstraintLayout>
